cabal-version: 2.4
name:          heimdall
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021

common base
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    TypeApplications

  build-depends:
    , base        ^>=4.14.1.0
    , bytestring
    , containers
    , store
    , text

library
  import:          base
  hs-source-dirs:  src
  exposed-modules: Heimdall

executable heimdall-cli
  import:         base
  hs-source-dirs: app/cli
  main-is:        Main.hs
  build-depends:
    , heimdall
    , optparse-applicative

executable heimdall-tui
  import:         base
  hs-source-dirs: app/tui
  main-is:        Main.hs
  build-depends:
    , brick
    , heimdall
